MY DEV ORG/src/objects/Investment__c.object
<CustomObject>
    <description>Custom object to capture Investment records that are logged to seek approval from Group Approvals</description>
    <fields>
        <fullName>ExtID__c</fullName>
        <externalId>true</externalId>
        <label>ExtID</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Investment_Amount__c</fullName>
        <description>Currency field to track the amount of investment Approval is being sought for.</description>
        <label>Investment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Investment_Type__c</fullName>
        <description>Field to track type of investment being made as this will determine approval process and inventory/documentation requirements related to the Investment record.</description>
        <label>Investment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Contracts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merger &amp; Acquisition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>No_of_Inventory_Records__c</fullName>
        <description>Rollup of all the Inventory records related to the Investment</description>
        <label>No. of Inventory Records</label>
        <summaryForeignKey>Inventory__c.Investment__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Investment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Investment_Type__c</columns>
        <columns>Investment_Amount__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Investment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Investments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>